--- a/.github/workflows/rename.yml
+++ b/.github/workflows/rename.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   rename-project:
-    if: ${{ github.repository	!= 'arpita-jaiswal/vivekananda-hi' && github.run_number == 1 }}
+    if: ${{ github.repository	!= 'arpita-jaiswal/vivekanand-hi' && github.run_number == 1 }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,7 +14,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}' | tr '-' '_' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
         shell: bash
-      - run: sed -i 's/vivekananda-hi/${{ env.REPOSITORY_NAME }}/g' FPM.ftd
+      - run: sed -i 's/vivekanand-hi/${{ env.REPOSITORY_NAME }}/g' FPM.ftd
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "✅ Ready to clone and code."
